--- a/src/index.css
+++ b/src/index.css
@@ -100,4 +100,6 @@ body {
 
 .font-logo {
   font-family: "Le Jour Serif", serif;
+  text-shadow: 0.5px 0 #665ed0, -0.5px 0 #665ed0, 0 0.5px #665ed0,
+    0 -0.5px #665ed0;
 }
